--- a/Submission.ipynb
+++ b/Submission.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**In the Kaggle competition, I was able to achieve a score of .87246:**\n",
+    "**In the Kaggle competition, I was able to achieve a score of .87246. My kaggle username is `watsonmldev`, my email is `acw5549@psu.edu` :**\n",
     "\n",
     "![Image](images/Kaggle-leaderboard.png)\n",
     "\n",
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
@@ -474,7 +474,7 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[4], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01multralytics\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m YOLO\n\u001B[0;32m      3\u001B[0m \u001B[38;5;66;03m#load an initial model\u001B[39;00m\n\u001B[0;32m      4\u001B[0m model \u001B[38;5;241m=\u001B[39m YOLO(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124myolov8x-cls.pt\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "Cell \u001B[1;32mIn[5], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01multralytics\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m YOLO\n\u001B[0;32m      3\u001B[0m \u001B[38;5;66;03m#load an initial model\u001B[39;00m\n\u001B[0;32m      4\u001B[0m model \u001B[38;5;241m=\u001B[39m YOLO(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124myolov8x-cls.pt\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
       "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'ultralytics'"
      ]
     }
